--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@ function plotPosCorrelation(){
 		//console.log(posColorScale(b))
 		plotCorLine(b, posColorScale(b), [-50,300]);
 	});
-	generateSelectionChart(posBrands);
+	generateSelectionChart(posBrands, posColorScale);
 	lineChart.append("text")
 		.attr("x", paddingLC*1.7)
 		.attr("y", paddingLC/2)
@@ -987,7 +987,7 @@ function plotInvCorrelation(){
 		//console.log(invColorScale(b))
 		plotCorLine(b, invColorScale(b), [-50,300]);
 	});
-	generateSelectionChart(invBrands);
+	generateSelectionChart(invBrands, invColorScale);
 	lineChart.append("text")
 		.attr("x", paddingLC*1.7)
 		.attr("y", paddingLC/2)
@@ -1013,7 +1013,7 @@ function plotInvCorrelation(){
 }
 
 /*********************CORRELATION CAR SELECTOR**********************************/
-function generateSelectionChart(brands){
+function generateSelectionChart(brands, colorScale){
 	barChart.selectAll('*').remove();
 
 	var heightScale = d3.scaleLinear()
@@ -1034,6 +1034,12 @@ function generateSelectionChart(brands){
 					.attr("class","barOverlay")
 					.attr("onmouseover","highlight('"+d+"')")
 					.attr("onmouseout", "dehighlight()");
+
+		barChart.append('circle')
+				.attr('cx', paddingBC/3)
+				.attr('cy', heightScale(i)+1)
+				.attr('r', 5)
+				.style('fill', colorScale(d));
 	});
 
 	
