--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@ var selected = [];
 var linePlotColorScale = d3.scaleOrdinal()
 							.domain(getVarNames())
 							.range(d3.schemeCategory20);
-var linePlotColorScaleWarm = d3.scaleOrdinal()
-							.domain(getVarNames())
-							.range("#3498db","#f1c40f","#e67e22","#e74c3c");
-var linePlotColorScaleCool = d3.scaleOrdinal()
-							.domain(getVarNames())
-							.range("#3498db","#9b59b6","#1abc9c","#2ecc71");
+// var linePlotColorScaleWarm = d3.scaleOrdinal()
+// 							.domain(getVarNames())
+// 							.range("#3498db","#f1c40f","#e67e22","#e74c3c");
+// var linePlotColorScaleCool = d3.scaleOrdinal()
+// 							.domain(getVarNames())
+// 							.range("#3498db","#9b59b6","#1abc9c","#2ecc71");
 
 function start(){
 	lineChart.selectAll('*').remove();
@@ -977,7 +977,7 @@ function plotInvCorrelation(){
 	lineChart.selectAll('*').remove();
 	legend.selectAll('*').remove();
 	var invBrands = ["DOW", "Chevrolet", "Porsche", "Audi"];
-	var invColors = ["#3498db","#9b59b6","#1abc9c","#2ecc71"];
+	var invColors = ["#3498db","#9b59b6","#1abc9c","#34495e"];
 	var yExtent = findYExtent(invBrands);
 	var invColorScale = d3.scaleOrdinal()
 							.domain(invBrands)
