--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <title>Project 2</title>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="./node_modules/waypoint/lib/noframework.waypoints.js"></script>
+<script src="node_modules/waypoint/lib/noframework.waypoints.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <!-- my resources -->
-<link href="css/main.css?v11" rel="stylesheet" type="text/css">
+<link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="container">
@@ -33,7 +33,6 @@
 		<svg id="line-chart"/>
 		<svg id="bar-chart"/>
 	</div>
-<script type="text/javascript" src="js/main.js?v1" ></script>
-
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
